--- a/Robocol/testapp/package.json
+++ b/Robocol/testapp/package.json
@@ -12,25 +12,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.3",
-    "@angular/common": "~10.0.3",
-    "@angular/compiler": "~10.0.3",
-    "@angular/core": "~10.0.3",
-    "@angular/forms": "~10.0.3",
-    "@angular/platform-browser": "~10.0.3",
-    "@angular/platform-browser-dynamic": "~10.0.3",
-    "@angular/router": "~10.0.3",
+    "@angular/animations": "^10.0.7",
+    "@angular/common": "^10.0.7",
+    "@angular/compiler": "^10.0.7",
+    "@angular/core": "^10.0.7",
+    "@angular/forms": "^10.0.7",
+    "@angular/platform-browser": "^10.0.7",
+    "@angular/platform-browser-dynamic": "^10.0.7",
+    "@angular/router": "^10.0.7",
+    "ngx-socket-io": "^3.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.3",
-    "@angular/cli": "~10.0.2",
-    "@angular/compiler-cli": "~10.0.3",
-    "@types/jasmine": "~3.5.0",
+    "@angular-devkit/build-angular": "^0.1000.5",
+    "@angular/cli": "^10.0.5",
+    "@angular/compiler-cli": "^10.0.7",
+    "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.53",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -41,7 +42,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.7"
   }
 }
