--- a/Robocol/testapp/package.json
+++ b/Robocol/testapp/package.json
@@ -17,9 +17,12 @@
     "@angular/compiler": "^10.0.7",
     "@angular/core": "^10.0.7",
     "@angular/forms": "^10.0.7",
+    "@angular/localize": "^10.0.7",
     "@angular/platform-browser": "^10.0.7",
     "@angular/platform-browser-dynamic": "^10.0.7",
     "@angular/router": "^10.0.7",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "bootstrap": "^4.5.0",
     "ngx-socket-io": "^3.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
