--- a/Robocol/testapp/angular.json
+++ b/Robocol/testapp/angular.json
@@ -120,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "testapp"
+    }
+  },
+  "defaultProject": "testapp",
+  "cli": {
+    "analytics": false
+  }
 }
