--- a/Robocol/testapp/package.json
+++ b/Robocol/testapp/package.json
@@ -34,6 +34,7 @@
     "@angular/compiler-cli": "^10.0.7",
     "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.1",
     "@types/node": "^12.12.53",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
