--- a/Robocol/testapp/package.json
+++ b/Robocol/testapp/package.json
@@ -23,7 +23,10 @@
     "@angular/router": "^10.0.7",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
+    "ng": "0.0.0",
+    "ngx-permissions": "^8.0.0",
     "ngx-socket-io": "^3.2.0",
+    "ngx-toastr": "^13.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
