--- a/Robocol/testapp/package.json
+++ b/Robocol/testapp/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
     "ng": "0.0.0",
+    "ngx-bootstrap-slider": "^1.9.0",
     "ngx-permissions": "^8.0.0",
     "ngx-socket-io": "^3.2.0",
     "ngx-toastr": "^13.0.0",
