--- a/Robocol/testapp/package.json
+++ b/Robocol/testapp/package.json
@@ -28,6 +28,7 @@
     "ngx-socket-io": "^3.2.0",
     "ngx-toastr": "^13.0.0",
     "rxjs": "~6.5.5",
+    "rxjs-compat": "^6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
