--- a/Robocol/testapp/package.json
+++ b/Robocol/testapp/package.json
@@ -30,6 +30,7 @@
     "ngx-toastr": "^13.0.0",
     "rxjs": "~6.5.5",
     "rxjs-compat": "^6.6.2",
+    "socket.io": "^2.3.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
