Images from assets fix

--- a/Robocol/testapp/angular.json
+++ b/Robocol/testapp/angular.json
@@ -29,7 +29,8 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/static"
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
