--- a/Robocol/testapp/package.json
+++ b/Robocol/testapp/package.json
@@ -32,6 +32,8 @@
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.3",
     "rxjs-compat": "^6.6.3",
+    "webpack": "^4.19.1",
+    "webpack-dev-server": "^3.1.9",
     "zone.js": "~0.11.1"
   },
   "devDependencies": {
