--- a/Robocol/testapp/package.json
+++ b/Robocol/testapp/package.json
@@ -13,11 +13,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^10.1.4",
+    "@angular/cdk": "^11.0.0",
     "@angular/common": "^10.1.4",
     "@angular/compiler": "^10.1.4",
     "@angular/core": "^10.1.4",
     "@angular/forms": "^10.1.4",
     "@angular/localize": "^10.1.4",
+    "@angular/material": "^11.0.0",
     "@angular/platform-browser": "^10.1.4",
     "@angular/platform-browser-dynamic": "^10.1.4",
     "@angular/router": "^10.1.4",
