--- a/Robocol/testapp/package.json
+++ b/Robocol/testapp/package.json
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^10.0.1",
-    "@angular-devkit/build-angular": "^0.1001.7",
+    "@angular-devkit/build-angular": "^0.1102.2",
     "@angular/cli": "^10.1.4",
     "@angular/compiler-cli": "^10.1.4",
     "@types/jasmine": "^3.5.14",
@@ -56,6 +56,7 @@
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "~7.0.0",
+    "sass-loader": "^11.0.1",
     "ts-node": "~9.0.0",
     "typescript": "^3.9.5",
     "webpack-bundle-tracker": "^0.4.2-beta"
