--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+#ANGULAR AND NODEJS GITIGNORE
+Robocol/testapp/node_modules/
+Robocol/testapp/package-lock.json
+Robocol/testapp/webpack-stats.json
+
+
 # -- PYTHON GITIGNORE --
 
 # Byte-compiled / optimized / DLL files
