Deleted package-lock.json and webpack-stats.json. Added them to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+#ANGULAR AND NODEJS GITIGNORE
+Robocol/testapp/node_modules/
+Robocol/testapp/package-lock.json
+Robocol/testapp/webpack-stats.json
+
 # -- PYTHON GITIGNORE --
 
 # Byte-compiled / optimized / DLL files
@@ -139,4 +144,4 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-*.pyc 
+*.pyc
