--- a/Robocol/testapp/package.json
+++ b/Robocol/testapp/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.5.1",
     "ng": "0.0.0",
     "ngx-bootstrap-slider": "^1.9.0",
+    "ngx-joystick": "^1.0.2",
     "ngx-permissions": "^8.1.1",
     "ngx-socket-io": "^3.2.0",
     "ngx-toastr": "^13.1.0",
@@ -58,7 +59,7 @@
     "protractor": "~7.0.0",
     "sass-loader": "^11.0.1",
     "ts-node": "~9.0.0",
-    "typescript": "^4.1.5",
+    "typescript": "^4.0.7",
     "webpack-bundle-tracker": "^0.4.2-beta"
   }
 }
