--- a/Robocol/testapp/package.json
+++ b/Robocol/testapp/package.json
@@ -29,6 +29,7 @@
     "ng": "0.0.0",
     "ngx-bootstrap-slider": "^1.9.0",
     "ngx-permissions": "^8.1.1",
+    "ngx-joystick": "^1.0.2",
     "ngx-socket-io": "^3.2.0",
     "ngx-toastr": "^13.1.0",
     "popper.js": "^1.16.1",
