--- a/Robocol/testapp/package.json
+++ b/Robocol/testapp/package.json
@@ -12,17 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.4",
+    "@angular/animations": "10.1.0",
     "@angular/cdk": "^10.2.7",
-    "@angular/common": "^11.2.4",
-    "@angular/compiler": "^11.2.4",
-    "@angular/core": "^11.2.4",
-    "@angular/forms": "^11.2.4",
-    "@angular/localize": "^11.2.4",
+    "@angular/common": "10.1.0",
+    "@angular/compiler": "10.1.0",
+    "@angular/core": "10.1.0",
+    "@angular/forms": "10.1.0",
+    "@angular/localize": "10.1.0",
     "@angular/material": "^10.2.7",
-    "@angular/platform-browser": "^11.2.4",
-    "@angular/platform-browser-dynamic": "^11.2.4",
-    "@angular/router": "^11.2.4",
+    "@angular/platform-browser": "10.1.0",
+    "@angular/platform-browser-dynamic": "10.1.0",
+    "@angular/router": "10.1.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
@@ -34,7 +34,6 @@
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.3",
     "rxjs-compat": "^6.6.3",
-    "typescript": "^4.0.7",
     "webpack": "^4.19.1",
     "webpack-dev-server": "^3.1.9",
     "zone.js": "~0.11.1"
@@ -42,8 +41,8 @@
   "devDependencies": {
     "@angular-builders/custom-webpack": "^10.0.1",
     "@angular-devkit/build-angular": "^0.1102.3",
-    "@angular/cli": "^11.2.11",
-    "@angular/compiler-cli": "^11.2.4",
+    "@angular/cli": "10.1.0",
+    "@angular/compiler-cli": "10.1.0",
     "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "~2.0.8",
     "@types/jquery": "^3.5.2",
@@ -59,6 +58,7 @@
     "protractor": "~7.0.0",
     "sass-loader": "^11.0.1",
     "ts-node": "~9.0.0",
+    "typescript": ">=3.9.2 and <4.1.0",
     "webpack-bundle-tracker": "^0.4.2-beta"
   }
 }
