--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,21 +11,25 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        working-directory: scripts
 
     steps:
     
-    - uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-        
-    - working-directory: Robocol/testapp
-      run: npm install
-    
-    - working-directory: Robocol/testapp
-      run: npm run build
-    
     -   name: Checkout
         uses: actions/checkout@v2
+    
+    -   uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+        
+    -   run: npm install
+        working-directory: Robocol/testapp
+    
+    -   run: npm run build
+        working-directory: Robocol/testapp
         
     -   name: Login to Docker Hub
         uses: docker/login-action@v1
