--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,4 +40,4 @@ jobs:
         with:
           push: true
           tags: robocol/interfaz:latest
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
